classDiagram
    class EdgeOperator {
        <<interface>>
        +apply(input: cv::Mat) cv::Mat
        +name() string
    }
    class SobelOperator {
        +apply(input: cv::Mat) cv::Mat
        +name() string
    }
    class PrewittOperator {
        +apply(input: cv::Mat) cv::Mat
        +name() string
    }
    class EdgeDetector {
        +EdgeDetector(opType: OperatorType)
        +setOperator(opType: OperatorType)
        +detectEdges(input: cv::Mat) cv::Mat
        +currentOperatorName() string
        -op_: unique_ptr<EdgeOperator>
        -opType_: OperatorType
        -createOperator()
    }
    EdgeOperator <|.. SobelOperator
    EdgeOperator <|.. PrewittOperator
    EdgeDetector o-- EdgeOperator 